--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,9 +26,9 @@
     -->
     
     <!-- Content Security Policy meta tag-->
-    <meta http-equiv="Content-Security-Policy" 
+    <!-- <meta http-equiv="Content-Security-Policy" 
     content="default-src 'self'; script-src 'self' https://trusted-cdn.com; style-src 'self'; 
-    img-src 'self' data:; child-src 'none';">
+    img-src 'self' data:; child-src 'none';"> -->
 
     <title>learnup</title>
   </head>
